--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,6 @@
 @import '_normalize.scss'
 @import '_settings.sass'
 @import '_variables.sass'
+@import 'blocks/_navbar'
+@import 'blocks/_book'
 @import '_media.sass'
