--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -2,7 +2,7 @@
   .container
     max-width: 960px
   .navbar
-    padding-bottom: 50px
+    padding-bottom: 40px
     &-menu
       margin-left: 406px
       &__link
@@ -12,11 +12,23 @@
       height: 44px
     &__link
       margin-top: 10px
+  .about
+    &-text
+      margin-right: 58px
+    &-book
+      padding: 90px 100px
+    &-info
+      font-size: 16px
+  .button
+    &-outline
+      padding: 17px 25px 17px 25px
+    &-primary
+      padding: 17px 40px 17px 40px
 @media (max-width: 992px)
   .container
     max-width: 760px
   .navbar
-    padding-bottom: 50px
+    padding-bottom: 30px
     &-menu
       margin-left: 240px
     &__button
@@ -25,12 +37,40 @@
     &__link
       margin-top: 10px
       font-size: 14px
+  .about
+    &-text
+      margin-right: 48px
+      margin-top: -30px
+    &-book
+      padding: 80px 80px
+    &-info
+      font-size: 16px
+    &-title
+      font-size: 30px
+      margin-bottom: -7px
+    &-psycholigy
+      margin-top: 10px
+      font-size: 30px
+      line-height: 35px
+    &-subtitle
+      font-size: 16px
+      margin-top: 25px
+      margin-bottom: 15px
+    &-info
+      font-size: 14px
+  .button
+    &-outline
+      padding: 17px 79px 17px 80px
+      margin-right: 0
+    &-primary
+      margin-top: 30px
+      width: 100%
 @media (max-width: 766px)
   .container
     max-width: 700px
     width: 92%
   .navbar
-    padding-bottom: 20px
+    padding-bottom: 10px
     &-menu
       margin-left: 160px
       &__link
@@ -41,7 +81,84 @@
     &__link
       margin-top: 8px
       font-size: 12px
+  .about
+    &-text
+      margin-right: 30px
+      margin-top: -30px
+    &-book
+      padding: 50px 50px
+    &-info
+      font-size: 16px
+    &-title
+      font-size: 25px
+      margin-bottom: -7px
+    &-psycholigy
+      margin-top: 10px
+      font-size: 25px
+      line-height: 35px
+    &-subtitle
+      font-size: 14px
+      margin-top: 15px
+      margin-bottom: 5px
+    &-info
+      font-size: 12px
+  .button
+    width: 100%
+    margin-top: 30px
+    &-outline
+      padding: 17px 44px 17px 44px
+      margin-right: 0
+    &-primary
+      margin-top: 25px
+      width: 100%
 @media (max-width: 520px)
   .container
     max-width: 320px
-    width: 95%
+    width: 88%
+  .navbar
+    padding-bottom: 10px
+    &-menu
+      margin-left: 50px
+      &__link
+        font-size: 13px
+    &__button
+      width: 118px
+      height: 35px
+    &__link
+      margin-top: 8px
+      font-size: 12px
+  .about
+    &-text
+      margin-right: 10px
+      margin-top: -60px
+    &-book
+      width: 200px
+      padding: 10px 10px
+    &-image
+      width: 150px
+      height: 274px
+    &-title
+      font-size: 15px
+      margin-bottom: -17px
+    &-psycholigy
+      margin-top: 10px
+      font-size: 15px
+      line-height: 15px
+    &-subtitle
+      font-size: 8px
+      margin-top: 5px
+      margin-bottom: -2px
+    &-info
+      font-size: 7px
+      line-height: 1px
+  .button
+    margin-top: 15px
+    &-outline
+      padding: 7px 36px 7px 37px
+      font-size: 7px
+      margin-right: 0
+    &-primary
+      padding: 2px 14px 2px 14px
+      font-size: 8px
+      margin-top: 8px
+      width: 100%
