create: navbar mobile menu

--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -6,6 +6,8 @@
     align-items: center
     justify-content: space-between
     min-height: 100px
+    &__menu-button
+      display: none
   &-menu
     margin-left: 506px
     &__item
@@ -21,6 +23,7 @@
       font-style: normal
       font-weight: 600
       line-height: 22px
+
   &__button
     width: 148px
     height: 48px
