--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -69,18 +69,46 @@
   .container
     max-width: 700px
     width: 92%
+  body
+    padding-top: 68px
   .navbar
-    padding-bottom: 10px
+    &__mobile
+      &--fixed
+        position: fixed
+        left: 0
+        top: 0
+        right: 0
+        left: 0
+        z-index: 99
+    &-top
+      min-height: 50px
     &-menu
       margin-left: 160px
       &__link
-        font-size: 13px
+        display: none
     &__button
-      width: 118px
-      height: 35px
+      display: none
     &__link
       margin-top: 8px
       font-size: 12px
+  .menu
+    &-button
+      display: flex
+      width: 16px
+      height: 11px
+      align-items: center
+      justify-content: space-between
+      flex-direction: column
+      border: none
+      &__line
+        width: 16px
+        height: 1px
+        background-color: $button
+        cursor: pointer
+  .logo
+    &__image
+      width: 50px
+      height: 20px
   .about
     &-text
       margin-right: 30px
@@ -135,27 +163,27 @@
       width: 200px
       padding: 10px 10px
     &-image
-      width: 150px
-      height: 274px
+      width: 140px
+      height: 244px
     &-title
-      font-size: 15px
+      font-size: 14px
       margin-bottom: -17px
     &-psycholigy
       margin-top: 10px
-      font-size: 15px
+      font-size: 14px
       line-height: 15px
     &-subtitle
-      font-size: 8px
+      font-size: 7px
       margin-top: 5px
-      margin-bottom: -2px
+      margin-bottom: -10px
     &-info
-      font-size: 7px
-      line-height: 1px
+      font-size: 5px
+      line-height: 0
   .button
-    margin-top: 15px
+    margin-top: 12px
     &-outline
-      padding: 7px 36px 7px 37px
-      font-size: 7px
+      padding: 7px 26px 7px 27px
+      font-size: 6px
       margin-right: 0
     &-primary
       padding: 2px 14px 2px 14px
