--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -1,6 +1,7 @@
 .navbar
   padding-top: 3px
   padding-bottom: 69px
+  background-color: $light
   &-top
     display: flex
     align-items: center
@@ -9,6 +10,7 @@
     &__menu-button
       display: none
   &-menu
+    background-color: $light
     margin-left: 506px
     &__item
       display: flex
