--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -10,6 +10,8 @@
     &__menu-button
       display: none
   &-menu
+    display: flex
+    align-items: center
     background-color: $light
     margin-left: 506px
     &__item
