--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -27,8 +27,8 @@
       font-style: normal
       font-weight: 600
       line-height: 22px
-
   &__button
+    margin-left: 40px
     width: 148px
     height: 48px
     text-decoration: none
