--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -64,6 +64,7 @@
       margin-right: 0
     &-primary
       margin-top: 30px
+      padding: 17px 79px 17px 80px
 @media (max-width: 766px)
   .container
     max-width: 700px
@@ -84,7 +85,7 @@
       &--visible
         display: block
         position: fixed
-        left: -60px
+        left: -100px
         right: 0
         bottom: 0
         top: 58px
