--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -124,26 +124,40 @@
     &-info
       font-size: 16px
     &-title
-      font-size: 25px
+      font-size: 20px
       margin-bottom: -7px
     &-psycholigy
       margin-top: 10px
-      font-size: 25px
+      font-size: 20px
       line-height: 35px
     &-subtitle
-      font-size: 14px
+      font-size: 12px
       margin-top: 15px
       margin-bottom: 5px
     &-info
-      font-size: 12px
+      font-size: 10px
   .button
+    display: flex
+    flex-wrap: wrap
     width: 100%
-    margin-top: 30px
+    margin-top: 10px
     &-outline
-      padding: 17px 44px 17px 44px
-      margin-right: 0
+      width: 200px
+      padding-top: 8px
+      padding-bottom: 8px
+      padding-left: 10px
+      padding-right: 10px
+      text-align: center
+      font-size: 10px
     &-primary
-      margin-top: 25px
+      width: 200px
+      padding-top: 8px
+      padding-bottom: 8px
+      padding-left: 10px
+      padding-right: 10px
+      text-align: center
+      margin-top: 10px
+      font-size: 10px
 @media (max-width: 520px)
   .container
     max-width: 320px
