--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -29,8 +29,8 @@
       line-height: 22px
   &__button
     margin-left: 40px
-    width: 148px
-    height: 48px
+    max-width: 148px
+    min-height: 48px
     text-decoration: none
     border: 2px solid $button
     border-radius: 8px
