--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -2,4 +2,6 @@ $blue: #183B56
 $button: #1565D8
 $text-color: #5A7184
 $light: #fff
-$border: #ECEEF2
+$border: rgb(236, 238, 242)
+$bg: #B3BAC5
+$line: #ECEEF2
