--- a/sass/blocks/_recomendation.sass
+++ b/sass/blocks/_recomendation.sass
@@ -1,7 +1,8 @@
 .recomendation
   &-wrapper
-    display: flex
-    justify-content: space-between
+    display: grid
+    grid-template-columns: repeat(3, minmax(min-content, 1fr))
+    grid-template-rows: repeat(1, minmax(min-content, 1fr))
     margin-bottom: 79px
   &-title
     font-family: Roboto Condensed
@@ -11,19 +12,165 @@
     line-height: 40px
     color: $blue
     margin-bottom: 30px
+  &-book
+    grid-column: 1
+  &-booking
+    grid-column: 2
+    padding-top: 92px
 .card
-  white-space: nowrap
+  grid-column: span 2
+  &-title
+    margin-top: 12px
+    font-family: Roboto
+    font-size: 22px
+    font-style: normal
+    font-weight: 500
+    line-height: 32px
+    color: $blue
+  &-text
+    margin-top: -5px
+    font-family: Open Sans
+    font-size: 16px
+    font-style: normal
+    font-weight: 400
+    line-height: 22px
+    color: $blue
+  &-price
+    margin-top: 2px
+    margin-bottom: 24px
+    display: block
+    font-family: Roboto Condensed
+    font-size: 20px
+    font-style: normal
+    font-weight: 700
+    line-height: 24px
+    color: $button
+  &-button
+    margin-bottom: 24px
+    margin-left: -5px
+    background-color: $blue
+    color: $light
+    width: 101px
+    height: 36px
+    margin-right: 15px
+    border: none
+    border-radius: 20px
+    font-family: Open Sans
+    font-size: 16px
+    font-style: normal
+    font-weight: 700
+    line-height: 22px
   &-book
     display: flex
-    margin-right: 32px
     width: 358px
     height: 260px
+    padding: 11px 26px 11px 11px
+    margin-right: 32px
+    margin-bottom: 32px
+    border: 1px solid $border
+    border-radius: 8px
+  &-booking
+    display: flex
+    width: 358px
+    height: 260px
+    padding: 11px 26px 11px 11px
+    margin-right: 32px
+    margin-bottom: 32px
     border: 1px solid $border
     border-radius: 8px
   &-image
     width: 160px
-    height: 255px
+    height: 240px
+    margin-right: 20px
+    border-radius: 8px
+.more
+  grid-row: 1
+  grid-column: span 2
+  width: 751px
+  height: 72px
+  margin-top: -125px
+  border: none
+  cursor: pointer
+  color: $button
+  border-radius: 8px
+  text-transform: uppercase
+  font-family: Roboto Condensed
+  font-size: 16px
+  font-style: normal
+  font-weight: 700
+  line-height: 20px
 .top
+  grid-column: 3
+  &__card
+    display: flex
+    align-items: start
+    padding: 24px
+    &-block
+      border-radius: 8px
+      height: 1020px
+      background-color: rgba(0,0,0,0.1)
   &-image
+    border-radius: 8px
+    margin-right: 25px
     width: 120px
     height: 182px
+  &-headline
+    margin-bottom: 30px
+    font-family: Roboto Condensed
+    font-size: 32px
+    font-style: normal
+    font-weight: 700
+    line-height: 40px
+    color: $blue
+  &-line
+    width: 312px
+    margin-left: 24px
+    border: 1px solid $line
+    margin-top: 18px
+    margin-bottom: 27px
+  &-title
+    font-family: Roboto
+    font-size: 22px
+    font-style: normal
+    font-weight: 500
+    line-height: 32px
+    color: $blue
+    margin-bottom: 15px
+  &-price
+    display: block
+    font-family: Roboto Condensed
+    font-size: 20px
+    font-style: normal
+    font-weight: 700
+    line-height: 24px
+    color: $button
+    margin-bottom: 22px
+  &-button
+    width: 101px
+    height: 36px
+    background-color: $blue
+    color: $light
+    border-radius: 20px
+    border: none
+    font-family: Open Sans
+    font-size: 16px
+    font-style: normal
+    font-weight: 700
+    line-height: 22px
+    text-align: center
+.favorites
+  &-link
+    margin-left: 35%
+    text-decoration: none
+    text-transform: uppercase
+    color: $button
+    font-family: Roboto Condensed
+    font-size: 16px
+    font-style: normal
+    font-weight: 700
+    line-height: 20px
+.line
+  width: 1140px
+  border: 1px solid $line
+  margin-top: 79px
+  margin-bottom: 60px
