--- a/sass/blocks/_recomendation.sass
+++ b/sass/blocks/_recomendation.sass
@@ -19,6 +19,8 @@
     padding-top: 92px
 .card
   grid-column: span 2
+  &-logo
+    margin-left: 7px
   &-title
     width: 159px
     margin-top: 12px
@@ -47,7 +49,6 @@
     line-height: 24px
     color: $button
   &-button
-    margin-bottom: 24px
     margin-left: -5px
     background-color: $blue
     color: $light
@@ -84,6 +85,10 @@
     height: 240px
     margin-right: 20px
     border-radius: 8px
+.like
+  display: flex
+  align-items: center
+  height: 40px
 .more
   grid-row: 1
   grid-column: span 2
