--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -29,7 +29,7 @@
       line-height: 22px
   &__button
     margin-left: 40px
-    max-width: 148px
+    min-width: 148px
     min-height: 48px
     text-decoration: none
     border: 2px solid $button
