--- a/sass/blocks/_unreleased.sass
+++ b/sass/blocks/_unreleased.sass
@@ -18,6 +18,7 @@
       border-radius: 8px
       margin-left: 25px
   &__logo
+    cursor: pointer
     &-icon
       margin-left: 20px
   &-header
