--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -24,6 +24,25 @@
       padding: 17px 25px 17px 25px
     &-primary
       padding: 17px 40px 17px 40px
+  .recomendation
+    &-wrapper
+      grid-template-columns: repeat(2, minmax(min-content, 1fr))
+      grid-template-rows: repeat(1, minmax(min-content, 1fr))
+    &-title
+      margin-left: 50px
+  .card
+    &-book
+      margin-left: 50px
+      margin-right: 170px
+    &-booking
+      display: none
+  .top
+    grid-column: 2
+    grid-row: 1
+  .more
+    margin-left: 20px
+    margin-top: -220px
+    width: 500px
 @media (max-width: 992px)
   .container
     max-width: 760px
@@ -65,6 +84,24 @@
     &-primary
       margin-top: 30px
       padding: 17px 79px 17px 80px
+  .recomendation
+    &-wrapper
+      grid-template-columns: repeat(2, minmax(min-content, 1fr))
+      grid-template-rows: repeat(1, minmax(min-content, 1fr))
+    &-title
+  .card
+    &-book
+      margin-right: 50px
+      margin-left: 0
+    &-booking
+      display: none
+  .top
+    grid-column: 2
+    grid-row: 1
+  .more
+    margin-left: 0
+    margin-top: -220px
+    width: 370px
 @media (max-width: 766px)
   .container
     max-width: 700px
@@ -158,6 +195,56 @@
       text-align: center
       margin-top: 10px
       font-size: 10px
+  .recomendation
+    &-wrapper
+      grid-template-columns: repeat(2, minmax(min-content, 1fr))
+      grid-template-rows: repeat(1, minmax(min-content, 1fr))
+    &-title
+      font-size: 25px
+      margin-left: 0
+  .card
+    &-image
+      margin-right: 15px
+      width: 140px
+      height: 200px
+    &-title
+      font-size: 14px
+    &-text
+      font-size: 12px
+      margin-bottom: 5px
+    &-book
+      width: 320px
+      padding: 26px 15px 15px 15px
+      margin-right: 50px
+      margin-left: 0
+    &-booking
+      display: none
+    &-button
+      width: 80px
+      height: 30px
+      font-size: 12px
+  .top
+    grid-column: 2
+    grid-row: 1
+    &-headline
+      font-size: 25px
+    &-title
+      margin-top: 5px
+      width: 150px
+      font-size: 16px
+    &__card
+      &-block
+        padding: 14px
+        width: 310px
+    &-button
+      width: 80px
+      height: 30px
+      font-size: 12px
+  .more
+    margin-left: 0
+    margin-top: -220px
+    width: 320px
+
 @media (max-width: 520px)
   .container
     max-width: 320px
