--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,4 +5,5 @@
 @import 'blocks/_book'
 @import 'blocks/_recomendation'
 @import 'blocks/_unreleased'
+@import 'blocks/_history'
 @import '_media.sass'
