--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,7 +3,5 @@
 @import '_variables.sass'
 @import 'blocks/_navbar'
 @import 'blocks/_book'
-@import 'blocks/_recomendation'
-@import 'blocks/_unreleased'
-@import 'blocks/_history'
+@import 'blocks/_proposed'
 @import '_media.sass'
