--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,5 +3,5 @@
 @import '_variables.sass'
 @import 'blocks/_navbar'
 @import 'blocks/_book'
-@import 'blocks/_proposed'
+@import 'blocks/_recommendations'
 @import '_media.sass'
