--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,4 +4,5 @@
 @import 'blocks/_navbar'
 @import 'blocks/_book'
 @import 'blocks/_recommendations'
+@import 'blocks/_categories'
 @import '_media.sass'
