create: added slider

--- a/sass/blocks/_recommendations.sass
+++ b/sass/blocks/_recommendations.sass
@@ -189,11 +189,11 @@
       line-height: 20px
       text-align: center
       cursor: pointer
-    &__line
-      height: 1px
-      width: 90%
-      background-color: $line
-      margin: 0 auto
+  &-line
+    height: 1px
+    width: 90%
+    background-color: $line
+    margin: 0 auto
   &-wrapper
     padding: 24px 24px 26px 24px
     background-color: rgba(179, 186, 197, 0.1)
