--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -24,7 +24,39 @@
       padding: 17px 25px 17px 25px
     &-primary
       padding: 17px 40px 17px 40px
-
+  .recommendations
+    &-wrp
+      max-width: 100%
+  .card
+    max-width: none
+    &__info
+      margin-left: 30px
+    &__title
+      min-width: 250px
+  .wrapper
+    flex-wrap: wrap
+  .month
+    &-top
+      margin: 0 0 70px 0
+      padding: 0
+      max-width: none
+      width: 100%
+    &-wrapper
+      display: flex
+      flex-wrap: wrap
+      align-items: flex-start
+      justify-content: space-between
+  .categories
+    &-card
+      width: 235px
+      height: 220px
+    &-image
+      margin-bottom: 15px
+    &-title
+      font-size: 18px
+      margin-bottom: 10px
+    &-subtitle
+      font-size: 14px
 @media (max-width: 992px)
   .container
     max-width: 760px
@@ -66,8 +98,26 @@
     &-primary
       margin-top: 30px
       padding: 17px 79px 17px 80px
-
-@media (max-width: 776px)
+  .card
+    &__title
+      min-width: 200px
+  .categories
+    &__button
+      width: 45px
+      height: 45px
+      padding-top: 15px
+    &-card
+      width: 180px
+      height: 190px
+    &-image
+      width: 40px
+      height: 40px
+    &-title
+      font-size: 14px
+      margin-bottom: 5px
+    &-subtitle
+      font-size: 12px
+@media (max-width: 778px)
   .container
     max-width: 700px
     width: 92%
@@ -160,8 +210,34 @@
       text-align: center
       margin-top: 10px
       font-size: 10px
-
-@media (max-width: 520px)
+  .recommendations
+    padding: 45px 0 49px 0
+    &__card
+      flex-basis: 100%
+      min-height: auto
+  .card
+    &__title
+      min-width: 300px
+  .categories
+    &-card
+      width: 150px
+      height: 140px
+      padding-top: 25px
+      margin-bottom: 20px
+    &-image
+      width: 30px
+      height: 30px
+      margin-bottom: 5px
+    &-title
+      font-size: 12px
+      margin-bottom: -5px
+    &-subtitle
+      font-size: 10px
+  .swiper
+    &-slide
+      display: flex
+      flex-wrap: wrap
+@media (max-width: 576px)
   .container
     max-width: 320px
     width: 92%
@@ -178,6 +254,11 @@
       margin-left: 20px
       margin-top: -30px
       font-size: 15px
+  .button
+    &-outline
+      width: 100%
+    &-primary
+      width: 100%
   .book
     padding-bottom: 10px
     &-info
@@ -209,3 +290,84 @@
     &-info
       font-size: 14px
       line-height: 0
+  .recommendations
+    margin: 0px auto 0px auto
+    &__title
+      font-size: 28px
+      margin-bottom: 72px
+      text-align: center
+    &__card
+      flex-basis: 0
+      &:not(:first-child)
+        display: none
+    &__button
+      width: 300px
+      font-size: 16px
+      text-transform: none
+      padding: 16px 0
+  .card
+    position: relative
+    max-height: none
+    min-width: auto
+    padding: 0
+    margin-bottom: 22px
+    &__link
+      &-img
+        position: absolute
+        top: -25px
+        left: 50%
+        transform: translateX(-50%)
+    &__img
+      border-radius: 8px
+      width: 96px
+      height: 137px
+    &__info
+      margin: 121px auto 0 auto
+    &__title
+      text-align: center
+      font-size: 20px
+      line-height: 24px
+    &__text
+      margin: 0 auto 20px auto
+      display: block
+    &__price
+      margin: 0 auto 22px auto
+      font-size: 16px
+    &__buttons
+      margin: 0 auto
+      width: 155px
+  .month
+    &-top
+      margin-bottom: 55px
+      &__title
+        font-size: 28px
+        text-align: center
+        margin-bottom: 35px
+      &-wrp
+        padding: 27px 9px 0 9px
+      &__more
+        padding: 5px 0
+        margin-top: 18px
+  .swiper
+    &-container
+      padding-top: 20px
+  .categories
+    &-card
+      width: 140px
+      height: 182px
+    &-image
+      width: 36px
+      height: 36px
+    &-title
+      font-size: 14px
+      line-height: 20px
+      margin-bottom: 20px
+    &-subtitle
+      font-size: 12px
+    &__button
+      &_prev
+        margin-top: 200px
+        margin-left: 120px
+      &_next
+        margin-top: 200px
+        margin-right: 120px
