--- a/sass/blocks/_recommendations.sass
+++ b/sass/blocks/_recommendations.sass
@@ -3,12 +3,12 @@
   align-items: flex-start
   justify-content: space-between
 .recommendations
-  padding: 55px 0 79px 0
+  padding: 14px 0 70px 0
   font-family: 'Open-Sans', sans-serif
   font-weight: 400
   color: $text-color
   &__title
-    font-size: 32px
+    font-size: 28px
     color: $blue
     margin: 0 0 30px 0
   &-wrp
@@ -118,7 +118,7 @@
 
 .month
   &-top
-    padding: 55px 0 77px 0
+    padding-top: 10px
     max-width: 360px
     &__img
       width: 120px
