--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -19,6 +19,7 @@
       padding: 90px 100px
     &-info
       font-size: 16px
+      line-height: 25px
   .button
     &-outline
       padding: 17px 25px 17px 25px
@@ -336,6 +337,7 @@
     &__buttons
       margin: 0 auto
       width: 155px
+      margin-bottom: 20px
   .month
     &-top
       margin-bottom: 55px
@@ -348,13 +350,19 @@
       &__more
         padding: 5px 0
         margin-top: 18px
+      &__subtitle
+        font-size: 15px
+      &__button
+        font-size: 12px
   .swiper
     &-container
       padding-top: 20px
   .categories
+    padding-bottom: 100px
     &-card
       width: 140px
       height: 182px
+      padding: 20px 5px
     &-image
       width: 36px
       height: 36px
@@ -366,8 +374,8 @@
       font-size: 12px
     &__button
       &_prev
-        margin-top: 200px
+        margin-top: 250px
         margin-left: 120px
       &_next
-        margin-top: 200px
+        margin-top: 250px
         margin-right: 120px
