--- a/sass/blocks/_recommendations.sass
+++ b/sass/blocks/_recommendations.sass
@@ -104,18 +104,14 @@
   &__like
     display: block
     background-color: transparent
+    color: gray
     border: none
     margin: 0
     padding: 0
     cursor: pointer
-.fa-heart
-  font-size: 18px
-  color: #959EAD
-  cursor: pointer
-  &:active
-    content: ''
-    color: red
-
+    transition: all 0.3s
+.likes
+  color: red
 .month
   &-top
     padding-top: 10px
