--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -9,6 +9,7 @@
     min-height: 100px
     &__menu-button
       display: none
+      cursor: pointer
   &-menu
     display: flex
     align-items: center
