--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,4 +5,5 @@
 @import 'blocks/_book'
 @import 'blocks/_recommendations'
 @import 'blocks/_categories'
+@import 'blocks/_unreleased'
 @import '_media.sass'
