create: added section author

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,4 +6,5 @@
 @import 'blocks/_recommendations'
 @import 'blocks/_categories'
 @import 'blocks/_unreleased'
+@import 'blocks/_author'
 @import '_media.sass'
