--- a/sass/blocks/_author.sass
+++ b/sass/blocks/_author.sass
@@ -1,1 +1,65 @@
-
+.author
+  padding: 70px 0 100px 0
+  &-container
+    max-width: 1005px
+    margin: 0 auto
+  &__top
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 20px
+  &__title
+    font-size: 48px
+    line-height: 60px
+    color: $blue
+    margin: -37px 0 0 0
+  &__text
+    font-size: 18px
+    line-height: 32px
+    max-width: 383px
+    margin: 35px 35px 0 0
+    color: $text-color
+  &__videos
+    display: grid
+    grid-template-columns: repeat (3, 1fr)
+    grid-gap: 30px
+  &__box
+    grid-row: 1 / 2
+    grid-column: span 3
+    &:nth-child(2)
+      grid-row: 2 / 3
+      grid-column: 1 / 2
+    &:nth-child(3)
+      grid-row: 2 / 3
+      grid-column: 2 / 3
+    &:nth-child(4)
+      grid-row: 2 / 3
+      grid-column: 3 / 4
+  &__info
+    margin-top: 22px
+  &__subtitle
+    margin: 0 0 10px 0
+    font-weight: 500
+    font-size: 22px
+    line-height: 32px
+    color: $blue
+  &__desc
+    font-size: 16px
+    line-height: 22px
+    color: $text-color
+  &__bookmark
+    position: absolute
+    margin-top: -60px
+    margin-left: 300px
+  &__link
+    text-decoration: none
+.bookmark
+  padding: 0
+  background-color: transparent
+  outline: none
+  border: none
+  font-size: 18px
+  cursor: pointer
+.video
+  &__play
+    cursor: pointer
