create: added section clients

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,4 +7,5 @@
 @import 'blocks/_categories'
 @import 'blocks/_unreleased'
 @import 'blocks/_author'
+@import 'blocks/_clients'
 @import '_media.sass'
