--- a/sass/blocks/_blog.sass
+++ b/sass/blocks/_blog.sass
@@ -1,23 +1,34 @@
 .blog
-  padding: 100px 0 98px 0
+  padding: 113px 0 98px 0
   &__top
     display: flex
     align-items: center
     justify-content: space-between
     margin-bottom: 40px
   &__title
-    font-size: 40px
+    font-size: 42px
     line-height: 60px
     color: $blue
     margin: 0
     font-weight: 700
+    line-height: 32px
+    margin: 0 0 16px 10px
+    &-1
+      font-size: 22px
+      line-height: 60px
+      color: $blue
+      margin: 0
+      font-weight: 700
+      line-height: 32px
+      margin: -10px 0 16px 10px
   &__button
     font-weight: 700
-    padding: 11px 55px
+    padding: 11px 50px
     background-color: transparent
     border-radius: 22px
     font-size: 16px
-    margin-top: 3px
+    margin-right: -8px
+    margin-top: -20px
     color: $button
     border: 2px solid $button
     cursor: pointer
@@ -52,11 +63,6 @@
     &-subtitle
       color: $blue
       text-decoration: none
-  &__title
-    font-size: 24px
-    line-height: 32px
-    color: $blue
-    margin: 0 0 16px 10px
   &__subtitle
     color: $blue
     text-decoration: none
@@ -74,7 +80,7 @@
   &__info
     width: 266px
     min-height: 138px
-    margin-top: 8px
+    margin-top: 5px
     margin-left: 40px
     display: flex
     flex-direction: column
