--- a/sass/blocks/_author.sass
+++ b/sass/blocks/_author.sass
@@ -9,7 +9,7 @@
     justify-content: space-between
     margin-bottom: 20px
   &__title
-    font-size: 48px
+    font-size: 42px
     line-height: 60px
     color: $blue
     margin: -37px 0 0 0
@@ -38,7 +38,7 @@
   &__info
     margin-top: 22px
   &__subtitle
-    margin: 0 0 10px 0
+    margin: -10px 0 10px 0
     font-weight: 500
     font-size: 22px
     line-height: 32px
