--- a/sass/blocks/_recommendations.sass
+++ b/sass/blocks/_recommendations.sass
@@ -3,14 +3,14 @@
   align-items: flex-start
   justify-content: space-between
 .recommendations
-  padding: 14px 0 70px 0
+  padding: 9px 0 70px 0
   font-family: 'Open-Sans', sans-serif
   font-weight: 400
   color: $text-color
   &__title
     font-size: 28px
     color: $blue
-    margin: 0 0 30px 0
+    margin: 5px 0 30px 0
   &-wrp
     display: flex
     flex-wrap: wrap
@@ -51,9 +51,10 @@
   &__img
     width: 160px
     height: 238px
+    border-radius: 5px
   &__info
     margin-left: 20px
-    margin-top: 6px
+    margin-top: 15px
     display: flex
     flex-direction: column
     align-items: flex-start
