--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -58,6 +58,10 @@
       margin-bottom: 10px
     &-subtitle
       font-size: 14px
+  .unreleased
+    &__img
+      width: 160px
+      height: 220px
 @media (max-width: 992px)
   .container
     max-width: 760px
