--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -36,7 +36,7 @@
       &::-webkit-scrollbar
         width: 0
   &__input
-    border: 1px solid #1565D8
+    border: 3px solid #FAAD13
     border-radius: 4px
     width: 100%
     min-height: 30px
@@ -49,7 +49,7 @@
     align-items: center
   &__button
     color: #ffffff
-    background-color: #1565D8
+    background-color: #FAAD13
     border: none
     border-radius: 4px
     padding: 10px 15px
