--- a/sass/blocks/_story.sass
+++ b/sass/blocks/_story.sass
@@ -50,6 +50,8 @@
     cursor: pointer
     &-icon
       width: 30px
+      margin-top: 3px
+      margin-left: 5px
       height: 39px
       fill: #1565D8
   &-list
