--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -439,7 +439,7 @@
         width: 48px
         height: 48px
         top: 111%
-        right: 30%
+        right: 35%
       &-prev
         width: 48px
         height: 48px
@@ -524,6 +524,12 @@
     &__link
       font-size: 14px
       padding: 9px 47px
+    &__article
+      width: 300px
+      height: 300px
+      margin: 0 auto
+    &__cards
+      width: 300px
     &-card
       &:not(:last-child)
         margin-bottom: 31px
@@ -595,12 +601,13 @@
       line-height: 22px
       margin-bottom: 18px
     &__list
+      margin-left: 40px
       &--mar
         margin-left: 6px
         margin-right: 42px
       &--mar-2
         margin-left: 6px
-        margin-right: 54px
+        margin-right: 44px
     &__ul
       margin-bottom: 40px
     &__item
@@ -710,3 +717,12 @@
     &__link
       &:hover
         color: #1565D8
+  .unreleased
+    &-button
+      &-next
+        &:hover
+          background-color: #1565D8
+    &-button
+      &-prev
+        &:hover
+          background-color: #1565D8
