--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -548,6 +548,7 @@
       &__link
         font-size: 10px
         line-height: 20px
+
   .article
     &__image
       width: 280px
@@ -622,7 +623,9 @@
   .modal
     &__dialog
       top: 30%
-
+  .swiper
+    &-wrapper
+      width: 300px
 @media(hover: hover) and (pointer: fine)
   .nav
     &__link
