--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -203,6 +203,7 @@
         border-radius: 1px
         padding-bottom: 2px
   .books
+    width: 700px
     &-wrapper
       flex-direction: column
       justify-content: flex-start
