--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -203,13 +203,14 @@
         border-radius: 1px
         padding-bottom: 2px
   .books
-    width: 700px
+    width: 300px
     &-wrapper
       flex-direction: column
       justify-content: flex-start
       align-items: center
   .recommended
     padding-right: 0
+    margin: 0 auto
     &__title
       text-align: center
       font-size: 28px
@@ -351,6 +352,7 @@
       margin-bottom: 35px
   .best
     min-width: 290px
+    margin: 0 auto
     &__title
       font-size: 28px
       line-height: 36px
