--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -204,6 +204,7 @@
         padding-bottom: 2px
   .books
     width: 300px
+    margin: 0 auto
     &-wrapper
       flex-direction: column
       justify-content: flex-start
